--- a/tailwind/tab/theme-files/tab/tailwind.css
+++ b/tailwind/tab/theme-files/tab/tailwind.css
@@ -188,7 +188,7 @@
   margin: 0;
   min-height: 48px;
   min-width: auto;
-  padding: 0;
+  padding: 0 12px;
 }
 
 @media screen and (max-width: 480px) {
@@ -208,7 +208,7 @@
 .e-bigger .e-tab .e-tab-header .e-toolbar-item .e-tab-wrap,
 .e-tab.e-bigger .e-tab-header .e-toolbar-item .e-tab-wrap {
   height: 48px;
-  padding: 0 16px;
+  padding: 0 4px;
 }
 
 @media screen and (max-width: 480px) {
@@ -752,7 +752,7 @@
 
 .e-bigger .e-tab .e-tab-header.e-vertical .e-hor-nav,
 .e-tab.e-bigger .e-tab-header.e-vertical .e-hor-nav {
-  padding: 0 16px;
+  padding: 0 4px;
 }
 
 .e-bigger .e-tab .e-tab-header.e-vertical .e-hor-nav .e-popup-up-icon::before,
@@ -1318,7 +1318,7 @@
 
 .e-bigger .e-tab.e-rtl .e-tab-header.e-vertical .e-hor-nav,
 .e-tab.e-bigger.e-rtl .e-tab-header.e-vertical .e-hor-nav {
-  padding: 0 16px;
+  padding: 0 4px;
 }
 
 .e-bigger .e-tab.e-rtl .e-tab-header.e-vertical .e-popup-up-icon::after,
@@ -1330,7 +1330,7 @@
 
 .e-bigger .e-tab .e-content .e-item,
 .e-tab.e-bigger .e-content .e-item {
-  padding: 16px;
+  padding: 16px 0;
 }
 
 .e-tab {
@@ -1449,6 +1449,7 @@
   transition: left 0.125s cubic-bezier(0.35, 0, 0.25, 1), right 0.25s cubic-bezier(0.35, 0, 0.25, 1);
   border-radius: 2px;
   bottom: -1px;
+  height: 2px;
   transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
@@ -1461,7 +1462,7 @@
   margin: 0;
   min-height: 38px;
   min-width: auto;
-  padding: 0;
+  padding: 0 8px;
 }
 
 @media screen and (max-width: 480px) {
@@ -1473,7 +1474,7 @@
 
 .e-tab .e-tab-header .e-toolbar-item .e-tab-wrap {
   height: 38px;
-  padding: 0 12px;
+  padding: 0 4px;
   width: 100%;
 }
 
@@ -1541,7 +1542,7 @@
 }
 
 .e-tab .e-tab-header .e-toolbar-item.e-active .e-tab-text {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 .e-tab .e-tab-header .e-toolbar-item.e-active.e-ileft .e-text-wrap, .e-tab .e-tab-header .e-toolbar-item.e-active.e-iright .e-text-wrap {
@@ -1618,7 +1619,7 @@
 
 @media screen and (max-width: 480px) {
   .e-tab .e-tab-header .e-toolbar-item.e-icon .e-tab-wrap {
-    padding: 0 16px;
+    padding: 0 4px;
   }
 }
 
@@ -1739,6 +1740,7 @@
 
 .e-tab .e-tab-header .e-toolbar-pop .e-toolbar-item:not(.e-separator) {
   margin: 0;
+  padding: 0;
 }
 
 .e-tab .e-tab-header .e-toolbar-pop .e-toolbar-item .e-tab-wrap {
@@ -2200,7 +2202,7 @@
 }
 
 .e-tab .e-tab-header.e-vertical .e-hor-nav {
-  padding: 0 12px;
+  padding: 0 4px;
   width: 100%;
 }
 
@@ -2264,7 +2266,7 @@
 }
 
 .e-tab.e-rtl .e-tab-header.e-vertical .e-hor-nav {
-  padding: 0 12px;
+  padding: 0 4px;
 }
 
 .e-tab.e-rtl .e-tab-header.e-vertical .e-hor-nav .e-popup-up-icon::before,
@@ -2929,7 +2931,7 @@
   margin: 0;
   min-height: 38px;
   min-width: auto;
-  padding: 0;
+  padding: 0 8px;
 }
 
 @media screen and (max-width: 480px) {
@@ -2941,7 +2943,7 @@
 
 .e-tab-clone-element .e-tab-wrap {
   height: 38px;
-  padding: 0 12px;
+  padding: 0 4px;
   width: 100%;
 }
 
@@ -3037,7 +3039,7 @@
 
 @media screen and (max-width: 480px) {
   .e-tab-clone-element.e-icon .e-tab-wrap {
-    padding: 0 16px;
+    padding: 0 4px;
   }
 }
 
@@ -3155,7 +3157,7 @@
   margin: 0;
   min-height: 48px;
   min-width: auto;
-  padding: 0;
+  padding: 0 12px;
 }
 
 @media screen and (max-width: 480px) {
@@ -3171,7 +3173,7 @@
 
 .e-bigger .e-tab-clone-element .e-tab-wrap {
   height: 48px;
-  padding: 0 16px;
+  padding: 0 4px;
 }
 
 @media screen and (max-width: 480px) {
@@ -4142,7 +4144,7 @@
   color: #111827;
   font-size: 14px;
   line-height: 22px;
-  padding: 12px;
+  padding: 12px 0;
 }
 
 .e-tab-clone-element {
