--- a/tailwind/tab/theme-files/toolbar/tailwind.css
+++ b/tailwind/tab/theme-files/toolbar/tailwind.css
@@ -252,7 +252,7 @@
   margin: 0;
   min-height: 38px;
   min-width: 38px;
-  padding: 0;
+  padding: 0 8px;
 }
 
 .e-bigger .e-toolbar .e-toolbar-items .e-toolbar-item .e-tbar-btn.e-btn.e-tbtn-txt .e-icons.e-btn-icon,
@@ -354,7 +354,7 @@
   margin: 0;
   min-height: 38px;
   min-width: 38px;
-  padding: 0;
+  padding: 0 8px;
 }
 
 .e-bigger .e-toolbar.e-extended-toolbar .e-toolbar-extended .e-toolbar-item .e-tbar-btn.e-btn,
@@ -551,7 +551,7 @@
   margin: 0;
   min-height: 30px;
   min-width: 30px;
-  padding: 0;
+  padding: 0 4px;
 }
 
 .e-toolbar.e-extended-toolbar .e-toolbar-extended .e-toolbar-item .e-tbar-btn.e-btn {
@@ -606,7 +606,7 @@
   font-size: 18px;
   font-weight: 400;
   overflow: hidden;
-  padding: 0;
+  padding: 0 4px;
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -669,7 +669,6 @@
       justify-content: flex-start;
   min-height: 38px;
   padding: 0;
-  background: #fff;
 }
 
 .e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn.e-btn .e-icons.e-btn-icon {
@@ -1033,7 +1032,8 @@
   margin: 0;
   min-height: 30px;
   min-width: 30px;
-  padding: 0;
+  padding: 0 4px;
+  border-radius: 4px;
 }
 
 .e-toolbar .e-toolbar-items .e-toolbar-item .e-tbar-btn.e-btn.e-tbtn-txt .e-icons.e-btn-icon {
@@ -1081,7 +1081,7 @@
   font-size: 18px;
   font-weight: 400;
   overflow: hidden;
-  padding: 0;
+  padding: 0 4px;
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -1183,18 +1183,18 @@
 .e-toolbar {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background: #f3f4f6;
-  border: 1px solid #e5e7eb;
+  border: 0 solid #e5e7eb;
   box-shadow: none;
 }
 
 .e-toolbar.e-vertical .e-hor-nav {
   border: solid #e5e7eb;
-  border-width: 1px 0 0 0;
+  border-width: 0 0 0 0;
 }
 
 .e-toolbar.e-vertical.e-rtl .e-hor-nav {
   border: solid #e5e7eb;
-  border-width: 0 0 1px 0;
+  border-width: 0 0 0 0;
 }
 
 .e-toolbar.e-vertical .e-toolbar-items .e-toolbar-item.e-separator {
@@ -1252,9 +1252,17 @@
 
 .e-toolbar .e-toolbar-pop {
   background: #f3f4f6;
-  border: 1px solid #e5e7eb;
+  border: 0 solid #e5e7eb;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   background: #fff;
+}
+
+.e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn {
+  background: transparent;
+}
+
+.e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn:hover {
+  background: #e5e7eb;
 }
 
 .e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn-text {
@@ -1265,7 +1273,7 @@
 .e-toolbar.e-toolpop .e-hor-nav.e-nav-active:not(.e-expended-nav) {
   background: #f3f4f6;
   border: 0;
-  border-left: 1px #e5e7eb #f3f4f6;
+  border-left: 0 #e5e7eb #f3f4f6;
   box-shadow: none;
 }
 
@@ -1323,7 +1331,7 @@
   background: #f3f4f6;
   border: solid #e5e7eb;
   border-left: 0;
-  border-width: 0 1px 0 0;
+  border-width: 0 0 0 0;
 }
 
 .e-toolbar.e-rtl .e-hor-nav:not(.e-nav-active):hover {
@@ -1334,7 +1342,7 @@
 .e-toolbar .e-hor-nav {
   background: #f3f4f6;
   border: solid #e5e7eb;
-  border-width: 0 0 0 1px;
+  border-width: 0 0 0 0;
 }
 
 .e-toolbar .e-hor-nav:not(.e-expended-nav)::after {
