--- a/tailwind/toolbar/theme-files/toolbar/tailwind-dark.css
+++ b/tailwind/toolbar/theme-files/toolbar/tailwind-dark.css
@@ -252,7 +252,7 @@
   margin: 0;
   min-height: 38px;
   min-width: 38px;
-  padding: 0;
+  padding: 0 8px;
 }
 
 .e-bigger .e-toolbar .e-toolbar-items .e-toolbar-item .e-tbar-btn.e-btn.e-tbtn-txt .e-icons.e-btn-icon,
@@ -354,7 +354,7 @@
   margin: 0;
   min-height: 38px;
   min-width: 38px;
-  padding: 0;
+  padding: 0 8px;
 }
 
 .e-bigger .e-toolbar.e-extended-toolbar .e-toolbar-extended .e-toolbar-item .e-tbar-btn.e-btn,
@@ -551,7 +551,7 @@
   margin: 0;
   min-height: 30px;
   min-width: 30px;
-  padding: 0;
+  padding: 0 4px;
 }
 
 .e-toolbar.e-extended-toolbar .e-toolbar-extended .e-toolbar-item .e-tbar-btn.e-btn {
@@ -606,7 +606,7 @@
   font-size: 18px;
   font-weight: 400;
   overflow: hidden;
-  padding: 0;
+  padding: 0 4px;
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -669,7 +669,6 @@
       justify-content: flex-start;
   min-height: 38px;
   padding: 0;
-  background: #374151;
 }
 
 .e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn.e-btn .e-icons.e-btn-icon {
@@ -1033,7 +1032,8 @@
   margin: 0;
   min-height: 30px;
   min-width: 30px;
-  padding: 0;
+  padding: 0 4px;
+  border-radius: 4px;
 }
 
 .e-toolbar .e-toolbar-items .e-toolbar-item .e-tbar-btn.e-btn.e-tbtn-txt .e-icons.e-btn-icon {
@@ -1081,7 +1081,7 @@
   font-size: 18px;
   font-weight: 400;
   overflow: hidden;
-  padding: 0;
+  padding: 0 4px;
   text-align: center;
   text-decoration: none;
   text-transform: none;
@@ -1255,6 +1255,14 @@
   border: 1px solid #4b5563;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   background: #374151;
+}
+
+.e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn {
+  background: transparent;
+}
+
+.e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn:hover {
+  background: #4b5563;
 }
 
 .e-toolbar .e-toolbar-pop .e-toolbar-item .e-tbar-btn-text {
